# swaync-history

./: .gitignore  README.md  pyproject.toml
src/swaync_history/: __init__.py
