[project]
name = "swaync-history"
version = "0.1.0"
description = "Notification history logger and replayer for swaync"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "notify2",
    "dbus-python",
    "PyGObject",
]

[project.scripts]
swaync-history = "swaync_history:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/swaync_history"]
